--- a/index.html
+++ b/index.html
@@ -6,11 +6,62 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coronapp</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
-  <h1>Coronapp</h1>
+  <div class="header">
+    <div class="header-logo">
+      <img src="./assets/images/logo_coronapp.png" alt="Logo Coronapp" title="Logo Coronapp" width="40px" height="40px"
+        class="header-logo-image">
+      <h1>Coron<span>app</span></h1>
+    </div>
+    <div class="header-nav">
+      <ul class="menu">
+        <li class="menu-item">
+          <a href="#">Inicio</a>
+        </li>
+        <li class="menu-item">
+          <a href="#">Características</a>
+        </li>
+        <li class="menu-item">
+          <a href="#">Apoyo</a>
+        </li>
+        <li class="menu-item">
+          <a href="#">Contáctenos</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="hero">
+    <div class="hero-content">
+      <div class="hero-title">
+        <h2>Cuida la salud de tu <span>familia.</span></h2>
+      </div>
+      <div class="hero-text">
+        <p>Todo en un destino para consultas de salud de COVID-19. Consulte a más de 10,000 trabajadores de la salud
+          sobre sus inquietudes.</p>
+        <button class="button">Empezar</button>
+      </div>
+    </div>
+    <div class="hero-play">
+      <img src="./assets/images/play.png" alt="Imagen para reproducir video" title="Ver video" width="45" height="45">
+      <p>Ver video</p>
+    </div>
+
+  </div>
+  <div class="wrapper">
+
+  </div>
+
+
+
+
+
 </body>
 
 </html>
