--- a/index.html
+++ b/index.html
@@ -14,49 +14,69 @@
 </head>
 
 <body>
-  <div class="header">
-    <div class="header-logo">
-      <img src="./assets/images/logo_coronapp.png" alt="Logo Coronapp" title="Logo Coronapp" width="40px" height="40px"
-        class="header-logo-image">
-      <h1>Coron<span>app</span></h1>
-    </div>
-    <div class="header-nav">
-      <ul class="menu">
-        <li class="menu-item">
-          <a href="#">Inicio</a>
-        </li>
-        <li class="menu-item">
-          <a href="#">Características</a>
-        </li>
-        <li class="menu-item">
-          <a href="#">Apoyo</a>
-        </li>
-        <li class="menu-item">
-          <a href="#">Contáctenos</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="hero">
-    <div class="hero-content">
-      <div class="hero-title">
-        <h2>Cuida la salud de tu <span>familia.</span></h2>
+  <main>
+    <div class="head">
+      <div class="header">
+        <div class="header-logo">
+          <img src="./assets/images/logo_coronapp.svg" alt="Logo Coronapp" title="Logo Coronapp" width="45px"
+            height="45px" class="header-logo-image">
+          <h1>Coron<span>app</span></h1>
+        </div>
+        <div class="header-nav">
+          <ul class="menu">
+            <li class="menu-item">
+              <a href="#">Inicio</a>
+            </li>
+            <li class="menu-item">
+              <a href="#">Características</a>
+            </li>
+            <li class="menu-item">
+              <a href="#">Apoyo</a>
+            </li>
+            <li class="menu-item">
+              <a href="#">Contáctenos</a>
+            </li>
+          </ul>
+        </div>
+        <div class="header-decoration">
+
+        </div>
       </div>
-      <div class="hero-text">
-        <p>Todo en un destino para consultas de salud de COVID-19. Consulte a más de 10,000 trabajadores de la salud
-          sobre sus inquietudes.</p>
-        <button class="button">Empezar</button>
+
+      <div class="decoration">
+        <div class="decoration-box"></div>
       </div>
-    </div>
-    <div class="hero-play">
-      <img src="./assets/images/play.png" alt="Imagen para reproducir video" title="Ver video" width="45" height="45">
-      <p>Ver video</p>
+
+      <div class="hero">
+        <div class="hero-content">
+          <div class="hero-content-description">
+            <div class="hero-content-title">
+              <h2>Cuida la salud de tu <span>familia.</span></h2>
+            </div>
+            <div class="hero-content-text">
+              <p>Todo en un destino para consultas de salud de COVID-19. Consulte a más de 10,000 trabajadores de la
+                salud
+                sobre sus inquietudes.</p>
+              <button class="button">Empezar</button>
+            </div>
+          </div>
+          <div class="hero-content-image"></div>
+        </div>
+        <div class="hero-play">
+          <img src="./assets/images/play.svg" alt="Imagen para reproducir video" title="Ver video" width="45"
+            height="45">
+          <p>Ver video</p>
+        </div>
+
+
+      </div>
+
     </div>
 
-  </div>
-  <div class="wrapper">
+    <div class="wrapper">
 
-  </div>
+    </div>
+  </main>
 
 
 
